crates/nash-report/tests/solve/snapshots/solve__inference__recovery_direct_alias_ctor_keeps_header_type.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 4495
description: "module Main exposing (..)\nimport Builtin exposing (..)\ntype box = Box bool\nf : box -> ()\nf (Box (() as whole)) = whole ()\n"
info: diagnostic
---
nash::type::mismatch

  × `whole` is not a function; received 1 argument.
   ╭─[Main.nash:5:25]
 4 │ f : box -> ()
 5 │ f (Box (() as whole)) = whole ()
   ·                         ─────
   ╰────


nash::type::pattern_mismatch

  × Type mismatch: expected `bool`, found `unit`.
   ╭─[Main.nash:5:9]
 4 │ f : box -> ()
 5 │ f (Box (() as whole)) = whole ()
   ·         ─┬
   ·          ╰── argument 1 of `Box`
   ╰────
  help: Use an explicit comparison to produce a `bool`.
