crates/nash-report/tests/solve/snapshots/solve__inference__recovery_mixed_errors_forward.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 141
description: "module Literal exposing (..)\nimport Builtin exposing (..)\ntrait FromInt 'a where\n    fromInt : int -> 'a\ntrait FromString 'a where\n    fromString : string -> 'a\ntrait FromBytes 'a where\n    fromBytes : bytes -> 'a\nimpl FromInt int where\n    fromInt x = x\nimpl FromString string where\n    fromString x = x\nimpl FromBytes bytes where\n    fromBytes x = x\n\n\nmodule Main exposing (..)\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\ntype higher 'f = Higher ('f ())\nidfa : 'f 'a -> 'f 'a\nidfa x = x\nmismatch : ()\nmismatch = \\x -> x\nmissing = discard ()\nconstraint : 'a -> ()\nconstraint x = discard x\nambiguous = discard (create ())\nkind = idfa (Higher [])\n"
info: diagnostic
---
nash::type::bad_kind

  × Kind mismatch in `type application`: expected `Type -> Type`, found `Type`.
    ╭─[Main.nash:14:1]
 13 │ ambiguous = discard (create ())
 14 │ kind = idfa (Higher [])
    · ────
    ╰────
  help: Type arguments:

        Check type-constructor arguments and the annotation's quantified kinds.


nash::type::ambiguous_type

  × Cannot determine type `'a` in `ambiguous`.
    ╭─[Main.nash:13:1]
 12 │ constraint x = discard x
 13 │ ambiguous = discard (create ())
    · ─────────
 14 │ kind = idfa (Higher [])
    ╰────
  help: Required constraints: Round 'a

        Add a type annotation that determines this variable.


nash::type::missing_constraint

  × `discard` requires undeclared constraint `Round 'a`.
    ╭─[Main.nash:12:16]
 11 │ constraint : 'a -> ()
 12 │ constraint x = discard x
    · ─────┬────     ───┬───
    ·      │            ╰── constraint required here
    ·      ╰── annotation for `constraint`
 13 │ ambiguous = discard (create ())
    ╰────
  help: Add `Round 'a` to the annotation for `constraint`.


nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
    ╭─[Main.nash:9:12]
  7 │ idfa x = x
  8 │ mismatch : ()
    ·            ─┬
    ·             ╰── declared type
  9 │ mismatch = \x -> x
    ·            ───┬───
    ·               ╰── body of `mismatch`
 10 │ missing = discard ()
    ╰────


nash::type::missing_impl

  × No impl for `Round unit`.
    ╭─[Main.nash:10:11]
  9 │ mismatch = \x -> x
 10 │ missing = discard ()
    ·           ───┬───
    ·              ╰── required by `discard`
 11 │ constraint : 'a -> ()
    ╰────
  help: Import or define an impl for `Round unit`.
