crates/nash-report/tests/solve/snapshots/solve__inference__recursive_function.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2452
description: "Code:\n\nmodule Main exposing (forever)\n\nforever x = forever x\n"
---
forever : forall a b. a -> b
